# Flam-Assignment-stutikesarwani123-gmail.com

./: .gitignore  README.md
android/: build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  EdgeProcessor.cpp  EdgeProcessor.h  native-lib.cpp
android/app/src/main/java/com/flam/edgeviewer/: MainActivity.kt
android/app/src/main/java/com/flam/edgeviewer/camera/: CameraPipeline.kt
android/app/src/main/java/com/flam/edgeviewer/gl/: EdgeGlSurfaceView.kt  EdgeRenderer.kt
android/app/src/main/java/com/flam/edgeviewer/model/: FrameMetadata.kt
android/app/src/main/java/com/flam/edgeviewer/nativebridge/: NativeBridge.kt
android/app/src/main/java/com/flam/edgeviewer/util/: ImageProxyExt.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
web/: package-lock.json  package.json  tsconfig.json
web/public/: index.html  styles.css
web/src/: index.ts
